-- Создание справочных таблиц
CREATE TABLE IF NOT EXISTS ref_rating
(
    id
    BIGINT
    GENERATED
    BY
    DEFAULT AS
    IDENTITY
    PRIMARY
    KEY,
    code
    VARCHAR
(
    50
) NOT NULL UNIQUE
    );

CREATE TABLE IF NOT EXISTS ref_genre
(
    id
    BIGINT
    GENERATED
    BY
    DEFAULT AS
    IDENTITY
    PRIMARY
    KEY,
    name
    VARCHAR
(
    50
) NOT NULL UNIQUE
    );

-- Создание основных таблиц
CREATE TABLE IF NOT EXISTS users
(
    id
    BIGINT
    GENERATED
    BY
    DEFAULT AS
    IDENTITY
    PRIMARY
    KEY,
    login
    VARCHAR
(
    50
) NOT NULL,
    email VARCHAR
(
    100
) NOT NULL,
    name VARCHAR
(
    100
),
    birthday DATE
    );

CREATE TABLE IF NOT EXISTS films
(
    id
    BIGINT
    GENERATED
    BY
    DEFAULT AS
    IDENTITY
    PRIMARY
    KEY,
    name
    VARCHAR
(
    200
) NOT NULL,
    description VARCHAR
(
    200
),
    release_date DATE,
    duration INT,
    rating_id BIGINT NOT NULL,
    FOREIGN KEY
(
    rating_id
) REFERENCES ref_rating
(
    id
)
    );

-- Создание таблиц связей
CREATE TABLE IF NOT EXISTS film_genres
(
    id
    BIGINT
    GENERATED
    BY
    DEFAULT AS
    IDENTITY
    PRIMARY
    KEY,
    film_id
    BIGINT
    NOT
    NULL,
    genre_id
    BIGINT
    NOT
    NULL,
    FOREIGN
    KEY
(
    film_id
) REFERENCES films
(
    id
) ON DELETE CASCADE,
    FOREIGN KEY
(
    genre_id
) REFERENCES ref_genre
(
    id
)
  ON DELETE CASCADE
    );

CREATE TABLE IF NOT EXISTS friendships
(
    user_id
    BIGINT
    NOT
    NULL,
    friend_id
    BIGINT
    NOT
    NULL,
    PRIMARY
    KEY
(
    user_id,
    friend_id
),
    FOREIGN KEY
(
    user_id
) REFERENCES users
(
    id
) ON DELETE CASCADE,
    FOREIGN KEY
(
    friend_id
) REFERENCES users
(
    id
)
  ON DELETE CASCADE
    );

CREATE TABLE IF NOT EXISTS film_likes
(
    film_id
    BIGINT
    NOT
    NULL,
    user_id
    BIGINT
    NOT
    NULL,
    PRIMARY
    KEY
(
    film_id,
    user_id
),
    FOREIGN KEY
(
    film_id
) REFERENCES films
(
    id
) ON DELETE CASCADE,
    FOREIGN KEY
(
    user_id
) REFERENCES users
(
    id
)
  ON DELETE CASCADE
    );

-- Создание индексов
CREATE UNIQUE INDEX IF NOT EXISTS uidx_film_genre ON film_genres (film_id, genre_id);
CREATE UNIQUE INDEX IF NOT EXISTS uidx_film_user_like ON film_likes (film_id, user_id);